@@ -30,6 +30,7 @@ Other changes
 * Second argument to ``lxml.etree.Extension()`` helper is no longer
   required, third argument is now a keyword-only argument ``ns``.
 
+* ``lxml.html.tostring`` takes an ``encoding`` argument.
 
 2.0alpha5 (2007-11-24)
 ======================
